--- a/templates/stats.html
+++ b/templates/stats.html
@@ -6,14 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Google Workspace Disk Usage</title>
-    <meta http-equiv="refresh" content="300">
+    <style>
+        body { font-family: 'Nunito', sans-serif; }
+    </style>
 </head>
-<body class="bg-gray-100 h-screen flex items-center justify-center">
-    <div class="bg-white p-8 rounded-lg shadow-md w-96">
-        <h1 class="text-2xl mb-4 text-center">Google Workspace Disk Usage</h1>
-        <p class="mb-2"><strong>Total Quota:</strong> <span class="ml-2 text-blue-600">{{.TotalQuota}} MB</span></p>
-        <p class="mb-2"><strong>Used Quota:</strong> <span class="ml-2 text-red-600">{{.UsedQuota}} MB</span></p>
-        <p class=""><strong>Percentage Used:</strong> <span class="ml-2 text-green-600">{{printf "%.2f" .PercentageUsed}}%</span></p>
-</div>
+<body class="bg-gray-900 text-gray-300 h-screen flex items-center justify-center">
+    <div class="bg-gray-800 p-4 rounded-lg shadow-md w-64 border border-gray-700">
+        <h1 class="text-lg mb-2 border-b border-gray-700 pb-2 text-gray-100">Workspace Storage</h1>
+        <div class="flex justify-between mt-2">
+            <span>Total:</span>
+            <span class="text-blue-500">{{.TotalQuota}} TB</span>
+        </div>
+        <div class="flex justify-between mt-2">
+            <span>Used:</span>
+            <span class="text-red-500">{{.UsedQuota}} TB</span>
+        </div>
+        <div class="flex items-center mt-2 mb-2">
+            <div class="h-2 bg-gray-700 rounded-full flex-grow mr-2">
+                <div class="h-full bg-blue-600 rounded-full" style="width:{{printf "%.2f" .PercentageUsed}}%;"></div>
+            </div>
+            <span class="text-green-500">{{printf "%.2f" .PercentageUsed}}%</span>
+        </div>
+    </div>
 </body>
 </html>
