--- a/templates/stats.html
+++ b/templates/stats.html
@@ -10,8 +10,8 @@
         body { font-family: 'Nunito', sans-serif; }
     </style>
 </head>
-<body class="bg-gray-900 text-gray-300 h-screen flex items-center justify-center">
-    <div class="bg-gray-800 p-4 rounded-lg shadow-md w-64 border border-gray-700">
+<body class="bg-transparent	text-gray-300 h-screen flex items-center justify-center" style="background-color: rgb(37, 38, 43);;">
+    <div class="p-4 rounded-lg w-64">
         <h1 class="text-lg mb-2 border-b border-gray-700 pb-2 text-gray-100">Workspace Storage</h1>
         <div class="flex justify-between mt-2">
             <span>Total:</span>
@@ -22,7 +22,7 @@
             <span class="text-red-500">{{.UsedQuota}} TB</span>
         </div>
         <div class="flex items-center mt-2 mb-2">
-            <div class="h-2 bg-gray-700 rounded-full flex-grow mr-2">
+            <div class="h-2 rounded-full flex-grow mr-2">
                 <div class="h-full bg-blue-600 rounded-full" style="width:{{printf "%.2f" .PercentageUsed}}%;"></div>
             </div>
             <span class="text-green-500">{{printf "%.2f" .PercentageUsed}}%</span>
