--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,36 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Google Workspace Disk Usage</title>
     <style>
-        body { font-family: 'Nunito', sans-serif; }
+        body {
+            font-family: 'Nunito', sans-serif;
+            background-color: rgb(37, 38, 43) !important;
+        }
     </style>
 </head>
-<body class="bg-transparent	text-gray-300 h-screen flex items-center justify-center" style="background-color: rgb(37, 38, 43);;">
+
+<body class="bg-transparent text-gray-300 h-screen flex items-center justify-center">
     <div class="p-4 rounded-lg w-64">
         <h1 class="text-lg mb-2 border-b border-gray-700 pb-2 text-gray-100">Workspace Storage</h1>
-        <div class="flex justify-between mt-2">
-            <span>Total:</span>
-            <span class="text-blue-500">{{.TotalQuota}} TB</span>
-        </div>
-        <div class="flex justify-between mt-2">
-            <span>Used:</span>
-            <span class="text-red-500">{{.UsedQuota}} TB</span>
-        </div>
+        <!-- <div class="flex justify-between mt-2">
+                    <span>Total:</span>
+                    <span class="text-blue-500">{{.TotalQuota}} TB</span>
+                </div>
+                <div class="flex justify-between mt-2">
+                    <span>Used:</span>
+                    <span class="text-red-500">{{.UsedQuota}} TB</span>
+                </div> -->
         <div class="flex items-center mt-2 mb-2">
             <div class="h-2 bg-gray-700 rounded-full flex-grow mr-2">
-                <div class="h-full bg-blue-600 rounded-full" style="width:{{printf "%.2f" .PercentageUsed}}%;"></div>
+                <div class="h-full bg-blue-600 rounded-full" style="width:{{printf " %.2f" .PercentageUsed}}%;"></div>
             </div>
             <span class="text-green-500">{{printf "%.2f" .PercentageUsed}}%</span>
         </div>
+        <div class="flex justify-between mt-2">
+            <span class="text-red-600">{{.UsedQuota}} TB</span>
+            <!-- <span class="text-slate-600">of</span> -->
+            <span class="text-blue-600">{{.TotalQuota}} TB</span>
+        </div>
     </div>
 </body>
+
 </html>
