--- a/templates/stats.html
+++ b/templates/stats.html
@@ -16,16 +16,8 @@
 </head>
 
 <body class="bg-transparent text-gray-300 h-screen flex items-center justify-center">
-    <div class="p-4 rounded-lg w-64">
+    <div class="p-4 rounded-lg w-full max-w-screen-lg mx-auto">
         <h1 class="text-lg mb-2 border-b border-gray-700 pb-2 text-gray-100">Workspace Storage</h1>
-        <!-- <div class="flex justify-between mt-2">
-                    <span>Total:</span>
-                    <span class="text-blue-500">{{.TotalQuota}} TB</span>
-                </div>
-                <div class="flex justify-between mt-2">
-                    <span>Used:</span>
-                    <span class="text-red-500">{{.UsedQuota}} TB</span>
-                </div> -->
         <div class="flex items-center mt-2 mb-2">
             <div class="h-2 bg-gray-700 rounded-full flex-grow mr-2">
                 <div class="h-full bg-blue-600 rounded-full" style="width:{{printf " %.2f" .PercentageUsed}}%;"></div>
@@ -34,7 +26,6 @@
         </div>
         <div class="flex justify-between mt-2">
             <span class="text-red-600">{{.UsedQuota}} TB</span>
-            <!-- <span class="text-slate-600">of</span> -->
             <span class="text-blue-600">{{.TotalQuota}} TB</span>
         </div>
     </div>
