--- a/templates/stats.html
+++ b/templates/stats.html
@@ -17,14 +17,17 @@
 
 <body class="bg-transparent text-gray-300 h-screen flex items-center justify-center">
     <div class="p-4 rounded-lg w-full max-w-screen-lg mx-auto">
-        <h1 class="text-lg mb-2 border-b border-gray-700 pb-2 text-gray-100">Workspace Storage</h1>
-        <div class="flex items-center mt-2 mb-2">
+        <h1 class="text-lg mb-0 text-gray-100">
+          Workspace Storage
+          <span class="text-gray-400 text-sm">({{.Date}})</span>
+        </h1>
+        <div class="flex items-center mb-1">
             <div class="h-2 bg-gray-700 rounded-full flex-grow mr-2">
                 <div class="h-full bg-blue-600 rounded-full" style="width:{{printf " %.2f" .PercentageUsed}}%;"></div>
             </div>
             <span class="text-green-500">{{printf "%.2f" .PercentageUsed}}%</span>
         </div>
-        <div class="flex justify-between mt-2">
+        <div class="flex justify-between">
             <span class="text-red-600">{{.UsedQuota}} TB</span>
             <span class="text-blue-600">{{.TotalQuota}} TB</span>
         </div>
